--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "build:autoprefixer": "postcss dist/css/*.css --use autoprefixer -d dist/css",
     "build-dev": "npm-run-all build-dev:sass build:autoprefixer",
     "build-dev:sass": "sass --style=expanded --source-map src/sass:dist/css",
-    "watch": "npm-run-all build build-dev -p watch:*",
+    "watch": "npm-run-all build:*  build-dev -p watch:*",
     "watch:browsersync": "browser-sync start --server dist --files \"dist/**/*\"",
     "watch:sassprefixer": "onchange \"src/sass/**/*.scss\" -- npm run build-dev",
     "watch:copy": "onchange -e \"**/sass/**/*\" -e \"**/.gitkeep\" \"src/**/*\" -- copyfiles -a -u 1 {{changed}} dist"
@@ -45,5 +45,13 @@
     "stylelint": "^9.10.1",
     "stylelint-scss": "^3.5.4"
   },
-  "dependencies": {}
+  "dependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/IrynaBrusentsova/BooksApp.git"
+  },
+  "bugs": {
+    "url": "https://github.com/IrynaBrusentsova/BooksApp/issues"
+  },
+  "homepage": "https://github.com/IrynaBrusentsova/BooksApp#readme"
 }
